refactor: 핫한 정책 조회 기능 개선
- 조회수 + 찜수 기준 상위 6개 정책 조회 쿼리 적용
- Lazy 로딩 필드 region - Hibernate.initialize로 명시적 초기화